--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <article id="content">
-        <h1>Welcome to the Official Terraria Origins Wiki!</h1>
-        <p>A full catalog established and maintained by the <a is="a-link" href="Developers.html">Devs</a>.</p>
+        <h1>欢迎来到灾厄大修百科!</h1>
+        <p>项目作者: <a is="a-link" href="https://github.com/hocha113">HoCha113</a>.</p>
 
         <a is="a-link" href="where do we begin here?">Forum</a> <a is="a-link" href="https://discord.gg/NK7jERXsTN">Discord</a> <a is="a-link" href="https://youtube.com/@cheezpuffs?feature=shared">YouTube</a><br>
 
