--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
         <h1>欢迎来到灾厄大修百科!</h1>
         <p>项目作者: <a is="a-link" href="https://github.com/hocha113">HoCha113</a>.</p>
 
+        <div style="text-align: center;">
+            <img src="Asset/IntactLogo_workshop.png" alt="Logo" style="max-width: 100%; height: auto;">
+        </div>
+
         <a is="a-link" href="where do we begin here?">Forum</a> <a is="a-link" href="https://discord.gg/NK7jERXsTN">Discord</a> <a is="a-link" href="https://youtube.com/@cheezpuffs?feature=shared">YouTube</a><br>
 
         <img src="Images/Logo.png">
