--- a/index.html
+++ b/index.html
@@ -1,10 +1,6 @@
 ﻿<!DOCTYPE HTML>
 <html lang="en">
 <head>
-    <script src="afmlTags.js" defer></script>
-    <script src="automarkdown.js" defer></script>
-    <link rel="stylesheet" href="styling.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
         /* 背景渐变从黑色到红色 */
         body {
@@ -17,7 +13,7 @@
 <body>
     <article id="content">
         <h1 style="color: black; background-color: #aa2525; text-align: center; font-size: 40px;">
-            欢迎来到灾厄大修百科!
+            欢迎来到灾厄大修百科！
         </h1>
         <p style="text-align: center; font-size: 18px;">
             <a is="a-link" href="https://github.com/hocha113" style="color: white; background-color: red; padding: 5px 10px; border: 2px solid black; text-decoration: none; border-radius: 5px;">项目作者</a>
