--- a/index.html
+++ b/index.html
@@ -1,28 +1,8 @@
-﻿<!DOCTYPE HTML>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    <style>
-        /* 背景渐变从黑色到红色 */
-        body {
-            background: #aa2525;
-            margin: 0;
-            padding: 0;
-        }
-    </style>
 </head>
 <body>
-    <article id="content">
-        <h1 style="color: black; background-color: #aa2525; text-align: center; font-size: 40px;">
-            欢迎来到灾厄大修百科！
-        </h1>
-        <p style="text-align: center; font-size: 18px;">
-            <a is="a-link" href="https://github.com/hocha113" style="color: white; background-color: red; padding: 5px 10px; border: 2px solid black; text-decoration: none; border-radius: 5px;">项目作者</a>
-        </p>
-
-        <div style="text-align: center;">
-            <img src="Asset/IntactLogo_workshop.png" alt="Logo" style="max-width: 50%; height: auto;">
-        </div>
-
-    </article>
+    <h1>Hello world!</h1>
 </body>
 </html>
