--- a/index.html
+++ b/index.html
@@ -3,27 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>网页测试</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="bottom.css">
+    <base href="Asset/" target="_blank">
+    <title>测试网页</title>
 </head>
-<body>
-    <div id="sidebar" class="sidebar">
-        <button id="toggleBtn" class="toggle-btn">»»»</button>
-        <ul class="menu">
-            <li><a href="#"class="btn-animate btn-animate__overline-from-right"data-action="home">Home</a></li>
-            <li><a href="#"class="btn-animate btn-animate__overline-from-right"data-action="About">About</a></li>
-            <li><a href="#"class="btn-animate btn-animate__overline-from-right"data-action="Services">Services</a></li>
-            <li><a href="#"class="btn-animate btn-animate__overline-from-right"data-action="Contact">Contact</a></li>
-            <li><a href="#"class="btn-animate btn-animate__overline-from-right"data-action="Name">Name</a></li>
-            <li><a href="#"class="btn-animate btn-animate__overline-from-right"data-action="Close" id ="CloseID">Close</a></li>
-        </ul>
+<body class="colorTopRedInOrangToInPink">
+    <hr>
+    <h1>Hello world</h1>
+    <hr>
+    <a href="http://www.baidu.com" title="前往百度">This IS BaiDuWiki</a>
+    <hr>
+    <a style="color: darkred;">This Is Power</a>
+    <hr>
+    <a 
+    href="https://zh.wikipedia.org/wiki/%E6%83%A1%E9%AD%94%E7%8D%B5%E4%BA%BA%E7%B3%BB%E5%88%97" 
+    style="color:blueviolet">
+        I Need More Power</a>
+    <hr>
+    <a href="Asset/ThisISPower.ogg" download=""
+    style="text-decoration:none;">
+    Download File, get my PWOER!!!</a>
+    <hr>
+    <a href="http://www.baidu.com" title="前往百度" target="_blank" 
+    style="text-decoration:none;">
+    This IS BaiDuWiki</a>
+    <hr>
+    <a href="spekMyName.html" title="My Name Is MM" target="_blank"
+    style="text-decoration:none;">
+    Top in spekMyName</a>
+    <hr>
+    <a href="http://www.baidu.com" role="button"
+    style="text-decoration:none;"> 
+    This Is Buttom</a>
+    <hr>
+    <div class="gif-content">
+        <img src="M4.gif"><img src="M4.gif"><img src="M4.gif"><img src="M4.gif"><img src="M4.gif"><br>
+        <img src="M4.gif"><img src="M4.gif"><img src="M4.gif"><img src="M4.gif"><img src="M4.gif"><br>
+        <img src="M4.gif"><img src="M4.gif"><img src="M4.gif"><img src="M4.gif"><img src="M4.gif"><br>
     </div>
-    <div class="content">
-        <h1>Welcome</h1>
-        <p>This is the main content area. The sidebar can be toggled.</p>
-    </div>
-    <script src="utils.js"></script>
-    <script src="script.js"></script>
+    <hr>
+    
+    <h3>this is one gif img:
+        <a href="https://www.baidu.com">
+            <img src="M1.gif" alt="this is cooooool item img" width="200"> 
+        </a> 
+    </h3>
+    
 </body>
 </html>
