--- a/index.html
+++ b/index.html
@@ -4,50 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <base href="Asset/" target="_blank">
-    <title>测试网页</title>
+    <title>测试网页:CSS</title>
 </head>
-<body class="colorTopRedInOrangToInPink">
+<body>
+    <h1 id="topText">Hello world!</h1>
+    <h3>this is Power!</h3>
     <hr>
-    <h1>Hello world</h1>
+    <h3>this is Icon!</h3><img src="Asset/FireDust3.gif" class="icon">
     <hr>
-    <a href="http://www.baidu.com" title="前往百度">This IS BaiDuWiki</a>
+    <ul>
+        <li>Coffee</li>
+        <li>Tea</li>
+        <li>Coca Cola</li>
+    </ul>
     <hr>
-    <a style="color: darkred;">This Is Power</a>
+    <table>
+        <tr>
+        <th>Firstname</th>
+        <th>Lastname</th>
+        </tr>
+        <tr>
+        <td>Peter</td>
+        <td>Griffin</td>
+        </tr>
+        <tr>
+        <td>Lois</td>
+        <td>Griffin</td>
+        </tr>
+    </table>
     <hr>
-    <a 
-    href="https://zh.wikipedia.org/wiki/%E6%83%A1%E9%AD%94%E7%8D%B5%E4%BA%BA%E7%B3%BB%E5%88%97" 
-    style="color:blueviolet">
-        I Need More Power</a>
-    <hr>
-    <a href="Asset/ThisISPower.ogg" download=""
-    style="text-decoration:none;">
-    Download File, get my PWOER!!!</a>
-    <hr>
-    <a href="http://www.baidu.com" title="前往百度" target="_blank" 
-    style="text-decoration:none;">
-    This IS BaiDuWiki</a>
-    <hr>
-    <a href="spekMyName.html" title="My Name Is MM" target="_blank"
-    style="text-decoration:none;">
-    Top in spekMyName</a>
-    <hr>
-    <a href="http://www.baidu.com" role="button"
-    style="text-decoration:none;"> 
-    This Is Buttom</a>
-    <hr>
-    <div class="gif-content">
-        <img src="M4.gif"><img src="M4.gif"><img src="M4.gif"><img src="M4.gif"><img src="M4.gif"><br>
-        <img src="M4.gif"><img src="M4.gif"><img src="M4.gif"><img src="M4.gif"><img src="M4.gif"><br>
-        <img src="M4.gif"><img src="M4.gif"><img src="M4.gif"><img src="M4.gif"><img src="M4.gif"><br>
-    </div>
-    <hr>
-    
-    <h3>this is one gif img:
-        <a href="https://www.baidu.com">
-            <img src="M1.gif" alt="this is cooooool item img" width="200"> 
-        </a> 
-    </h3>
-    
+    <div>这里是盒子内的实际内容。有 25px 内间距, 25px 外间距、25px 绿色边框。</div>
 </body>
 </html>
