--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CalamityOverhaul 模组 Wiki</title>
-    <link rel="stylesheet" href="styles.css">
-    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="indexStyle.css">
+    <script src="indexJSCode.js" defer></script>
 </head>
 <body>
     <header class="wiki-header">
@@ -21,7 +21,7 @@
             <nav>
                 <ul>
                     <li><a href="#">首页</a></li>
-                    <li><a href="#">武器</a></li>
+                    <li><a href="weponList.html">武器</a></li>
                     <li><a href="#">改动</a></li>
                     <li><a href="#">敌人</a></li>
                     <li><a href="#">关于模组</a></li>
@@ -54,7 +54,7 @@
     </div>
 
     <footer class="wiki-footer">
-        <p>&copy; 2024 CalamityOverhaul Wiki. 保留所有权利。</p>
+        <p>&copy; 2024 CalamityOverhaul Wiki. 保留所有权利.</p>
     </footer>
 </body>
 </html>
