--- a/weponList.html
+++ b/weponList.html
@@ -28,7 +28,7 @@
             <h1>武器列表</h1>
             <p>点击任何武器以查看详细信息。</p>
             <div class="weapon-grid">
-                <div class="weapon-item" onclick="location.href='todo.html'">
+                <div class="weapon-item" onclick="location.href='weponPage1.html'">
                     <img src="Asset/M1.gif" alt="武器1">
                     <p>武器1</p>
                 </div>
