--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CalamityOverhaul 模组 Wiki</title>
     <link rel="stylesheet" href="indexStyle.css">
+    <link rel="stylesheet" href="searchStyle.css">
     <script src="indexJSCode.js" defer></script>
 </head>
 <body>
@@ -14,6 +15,11 @@
             <input type="text" id="search" placeholder="搜索...">
             <button onclick="performSearch()">搜索</button>
         </div>
+        <div id="search-results">
+            <div class="search-result-item"></div>
+        </div>
+        <script src="searchDictionary.js" defer></script>
+        <script src="searchSystem.js"></script>
     </header>
 
     <div class="content">
