--- a/404.html
+++ b/404.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>页面错误 - CalamityOverhaul Wiki</title>
-    <link rel="stylesheet" href="404Style.css">
+    <link rel="stylesheet" href="404.css">
 </head>
 <body>
     <div class="wiki-header">
