--- a/searchPreviewPage.html
+++ b/searchPreviewPage.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="indexStyle.css">
-    <link rel="stylesheet" href="searchPreviewPage.css">
-    <script src="searchDictionary.js"></script>
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="searchTool/searchPreviewPage.css">
+    <script src="searchTool/searchDictionary.js"></script>
     <title>动态预览页面</title>
 </head>
 <body>
@@ -28,6 +28,6 @@
     <footer class="wiki-footer">
         <p>&copy; 2024 CalamityOverhaul Wiki. 保留所有权利.</p>
     </footer>
-    <script src="searchPreviewPage.js"></script>
+    <script src="searchTool/searchPreviewPage.js"></script>
 </body>
 </html>
