--- a/weponList.html
+++ b/weponList.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>武器列表 - CalamityOverhaul Wiki</title>
-    <link rel="stylesheet" href="weponListStyle.css">
+    <link rel="stylesheet" href="weponList.css">
     <link rel="stylesheet" href="searchStyle.css">
 </head>
 <body>
