--- a/weponPage.html
+++ b/weponPage.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>武器介绍 - CalamityOverhaul Wiki</title>
-    <link rel="stylesheet" href="weponStyle.css">
+    <link rel="stylesheet" href="weponPage.css">
 </head>
 <body>
     <header class="wiki-header">
