--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="languageSelector.css">
     <link rel="stylesheet" href="searchTool/searchStyle.css">
-    <script src="index.js" defer></script>
 </head>
 <body>
     <header class="wiki-header">
@@ -29,6 +28,7 @@
             <nav>
                 <ul>
                     <!--首页就不要加一个‘首页’选项了-->
+                    <!--<li><a href="index.html">返回主页</a></li>--> 
                     <li><a href="weponList.html">武器</a></li>
                     <li><a href="#">改动</a></li>
                     <li><a href="#">敌人</a></li>
@@ -64,6 +64,7 @@
     <footer class="wiki-footer">
         <p>&copy; 2024 CalamityOverhaul Wiki. 保留所有权利.</p>
     </footer>
-    <script src="languageSelector.js" defer></script>
+    <script src="index.js" defer></script>
+    <script src="index_language.js" defer></script>
 </body>
 </html>
