--- a/weponList.html
+++ b/weponList.html
@@ -4,21 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>武器列表 - CalamityOverhaul Wiki</title>
+    <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="weponList.css">
-    <link rel="stylesheet" href="searchStyle.css">
+    <link rel="stylesheet" href="searchTool/searchStyle.css">
 </head>
 <body>
     <header class="wiki-header">
         <div class="logo">CalamityOverhaul Wiki</div>
         <div class="search-bar">
-            <input type="text" id="search" placeholder="搜索...">
-            <button onclick="performSearch()">搜索</button>
+            <input type="text" id="search" placeholder="搜索..." onclick="performSearch()">
+            <button onclick="searchButton()" id="search-button">搜索</button>
         </div>
         <div id="search-results">
             <div class="search-result-item"></div>
         </div>
-        <script src="searchDictionary.js" defer></script>
-        <script src="searchSystem.js"></script>
+        <script src="searchTool/searchDictionary.js" defer></script>
+        <script src="searchTool/searchSystem.js"></script>
     </header>
 
     <div class="gallery-content">
@@ -26,6 +27,9 @@
             <nav>
                 <ul>
                     <li><a href="index.html">返回主页</a></li>
+                    <li><a href="#">改动</a></li>
+                    <li><a href="#">敌人</a></li>
+                    <li><a href="#">关于模组</a></li>
                 </ul>
             </nav>
         </aside>
@@ -34,7 +38,7 @@
             <h1>武器列表</h1>
             <p>点击任何武器以查看详细信息。</p>
             <div class="weapon-grid">
-                <div class="weapon-item" onclick="location.href='weponPage1.html'">
+                <div class="weapon-item" onclick="location.href='404.html'">
                     <img src="Asset/M1.gif" alt="武器1">
                     <p>武器1</p>
                 </div>
