--- a/searchPreviewPage.html
+++ b/searchPreviewPage.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="searchTool/searchPreviewPage.css">
     <script src="searchTool/searchDictionary.js"></script>
-    <title>动态预览页面</title>
+    <title>搜索结果</title>
 </head>
 <body>
     <div class="content">
