--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <ul>
                     <!--首页就不要加一个‘首页’选项了-->
                     <!--<li><a href="index.html">返回主页</a></li>--> 
-                    <li><a href="weponList.html">武器</a></li>
+                    <li><a href="cn/core/weaponList.html">武器</a></li>
                     <li><a href="#">改动</a></li>
                     <li><a href="#">敌人</a></li>
                     <li><a href="#">关于模组</a></li>
