--- a/404.html
+++ b/404.html
@@ -27,7 +27,7 @@
             <nav>
                 <ul>
                     <li><a href="index.html">返回主页</a></li>
-                    <li><a href="weponList.html">武器</a></li>
+                    <li><a href="weaponList.html">武器</a></li>
                     <li><a href="#">改动</a></li>
                     <li><a href="#">敌人</a></li>
                     <li><a href="#">关于模组</a></li>
