--- a/cn/weapon/BrinyBaron.html
+++ b/cn/weapon/BrinyBaron.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>武器介绍 - CalamityOverhaul Wiki</title>
-    <link rel="icon" href="/Asset/other/icon.png" type="image/x-icon">
+    <title>海爵剑-灾厄大修Wiki</title>
+    <link rel="icon" href="/Asset/other/icon_small.png" type="image/x-icon">
     <link rel="stylesheet" href="/languageSelector.css">
     <link rel="stylesheet" href="/searchTool/searchStyle.css">
     <link rel="stylesheet" href="/weaponPage.css">
 </head>
 <body>
     <header class="wiki-header">
-        <div class="logo">CalamityOverhaul Wiki</div>
+        <div class="logo">灾厄大修Wiki</div>
         <div class="search-bar">
             <input type="text" id="search" placeholder="搜索..." onclick="performSearch()">
             <button onclick="searchButton()" id="search-button">搜索</button>
@@ -29,16 +29,24 @@
                 <ul>
                     <li><a href="/index.html">返回主页</a></li>
                     <li><a href="/weaponList.html">其他武器</a></li>
+                    <li><a href="#">改动</a></li>
+                    <li><a href="#">敌人</a></li>
+                    <li><a href="#">关于模组</a></li>
                 </ul>
             </nav>
         </aside>
 
         <main class="main-content">
             <h1>海爵剑</h1>
-            <p> 前六下挥舞发射追踪的海洋漩涡<br>
+            <button id ="cay_button">
+                <a href="https://calamitymod.wiki.gg/wiki/Briny_Baron">查看原版信息</a>
+            </button>
+            <p> 
+                前六下挥舞发射追踪的海洋漩涡<br>
                 第七下挥舞会生成大量爆炸泡泡<br>
                 第八下挥舞会发射三颗漩涡弹，击中目标或者物块后在原地生成水龙卷
             </p>
+            <img src="BrinyBaron.gif" alt="BrinyBaronUseGIF" width="50%">
         </main>
 
         <div class="image-block">
@@ -47,12 +55,12 @@
             <p>伤害:110</p>
             <p>击退:2</p>
             <p>使用时间:20</p>
-            <p>"用那头猪鲨的鳍制成，显然我们并不屑于只用那个会吹泡泡的猪头当武器"</p>
+            <p>"用那头猪鲨的鳍制成，显然我们并不屑于只用那个会吹泡泡的猪头当武器"</p>   
         </div>
     </div>
 
     <footer class="wiki-footer">
-        &copy; 2024 CalamityOverhaul Wiki. All Rights Reserved.
+        &copy; 2024 CalamityOverhaul Wiki. 保留所有权利.
     </footer>
 </body>
 </html>
