--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CalamityOverhaul 模组 Wiki</title>
-    <link rel="icon" href="Asset/other/icon.png" type="image/x-icon">
+    <title>Home-灾厄大修Wiki</title>
+    <link rel="icon" href="Asset/other/icon_small.png" type="image/x-icon">
     <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="languageSelector.css">
     <link rel="stylesheet" href="searchTool/searchStyle.css">
