--- a/cn/core/weaponList.html
+++ b/cn/core/weaponList.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>武器列表 - CalamityOverhaul Wiki</title>
+    <title>武器列表-灾厄大修Wiki</title>
+    <link rel="icon" href="/Asset/other/icon_small.png" type="image/x-icon">
     <link rel="stylesheet" href="/index.css">
     <link rel="stylesheet" href="/weaponList.css">
     <link rel="stylesheet" href="/languageSelector.css">
@@ -11,7 +12,7 @@
 </head>
 <body>
     <header class="wiki-header">
-        <div class="logo">CalamityOverhaul Wiki</div>
+        <div class="logo">灾厄大修Wiki</div>
         <div class="search-bar">
             <input type="text" id="search" placeholder="搜索..." onclick="performSearch()">
             <button onclick="searchButton()" id="search-button">搜索</button>
@@ -43,11 +44,11 @@
                     <img src="/Asset/weapon/BrinyBaron.png" alt="BrinyBaron">
                     <p>海爵剑</p>
                 </div>
-                <div class="weapon-item" onclick="location.href='weponPage.html'">
+                <div class="weapon-item" onclick="location.href='/cn/weapon/weaponPage.html'">
                     <img src="/Asset/M1.gif" alt="武器2">
                     <p>武器2</p>
                 </div>
-                <div class="weapon-item" onclick="location.href='weponPage.html'">
+                <div class="weapon-item" onclick="location.href='/weaponPage.html'">
                     <img src="/Asset/M1.gif" alt="武器3">
                     <p>武器3</p>
                 </div>
