--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 </section>
         
                 <section class="category" id = "2">
-                    <img src="Asset/other/Item_1.png">
+                    <img src="Asset/other/Splash_9_1.png">
                     <h2>改动</h2>
                     <p>了解模组中对原版内容的所有调整和改动</p>
                 </section>
