--- a/cn/weapon/weaponPage.html
+++ b/cn/weapon/weaponPage.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>示例物品介绍模板-灾厄大修Wiki</title>
+    <title>示例武器介绍模板</title>
     <link rel="icon" href="/Asset/other/icon_small.png" type="image/x-icon">
     <link rel="stylesheet" href="/languageSelector.css">
     <link rel="stylesheet" href="/searchTool/searchStyle.css">
@@ -28,7 +28,7 @@
             <nav>
                 <ul>
                     <li><a href="/index.html">返回主页</a></li>
-                    <li><a href="/weaponList.html">其他武器</a></li>
+                    <li><a href="/cn/core/weaponList.html">其他武器</a></li>
                     <li><a href="#">改动</a></li>
                     <li><a href="#">敌人</a></li>
                     <li><a href="#">关于模组</a></li>
@@ -37,26 +37,40 @@
         </aside>
 
         <main class="main-content">
-            <h1>示例物品介绍模板</h1>
-            <button id ="cay_button">
+            <h1>示例武器介绍模板</h1>
+            <p> 
+                示例武器介绍模板是一把.....下的....武器，掉落.....<br>
+                更多具体描述...<br>
+                更多具体描述...<br>
+                更多具体描述...<br>
+                更多具体描述...<br>
+                它的最佳前缀是...
+            </p>
+            <img src="/Asset/M1.gif" alt="M1" width=600>
+            <p class="extra-tip">——额外tip</p>
+            <button id ="href_button">
                 <a href="https://calamitymod.wiki.gg/wiki">查看原版信息</a>
             </button>
-            <p> 
-                此处用于放置详细的介绍信息<br>
-                此处用于放置详细的介绍信息<br>
-                此处用于放置详细的介绍信息
-            </p>
-            <img src="/Asset/M1.gif" alt="ExampleGIF" width="50%">
+            <button id ="href_button">
+                <a href="https://github.com/hocha113/CalamityOverhaul">查看代码实现</a>
+            </button>
         </main>
 
         <div class="image-block">
-            <img src="/Asset/M1.gif" alt="ExampleGIF">
-            <p>内部名:示例物品介绍模板</p>
-            <p>伤害:10</p>
-            <p>击退:2</p>
-            <p>使用时间:10</p>
-            <p>"示例物品介绍模板"</p>   
-        </div>
+            <h1 class="img-Item-Title">示例武器介绍模板</h1>
+            <img src="/Asset/M1.gif" alt="M1">
+            <p class="item-id">内部名: 示例武器介绍模板</p>
+            <p class="item-property">基本属性</p>
+            <p class="item-damage">伤害: 10</p>
+            <p class="item-knockback">击退: 0</p>
+            <p class="item-usetimer">使用时间: 10</p>
+            <p class="item-property">物品介绍</p>
+            <p class="item-description">
+                这里是物品在游戏中的描述<br>
+                这里是物品在游戏中的描述<br>
+                这里是物品在游戏中的描述
+            </p>
+        </div>        
     </div>
 
     <footer class="wiki-footer">
