--- a/searchPreviewPage.html
+++ b/searchPreviewPage.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="searchTool/searchPreviewPage.css">
     <script src="searchTool/searchDictionary.js"></script>
     <title>搜索结果</title>
+    <link rel="icon" href="/Asset/other/icon_small.png" type="image/x-icon">
 </head>
 <body>
     <div class="content">
