--- a/cn/weapon/BrinyBaron.html
+++ b/cn/weapon/BrinyBaron.html
@@ -46,7 +46,7 @@
                 第三阶段刀刃会指向鼠标方向，发射出三枚漩涡弹，漩涡弹接触物块或者击中敌人后会爆炸，并在原地生成一个很快就会消失的水龙卷<br>
                 它的最佳前缀是传奇
             </p>
-            <img src="BrinyBaron.gif" alt="BrinyBaronUseGIF" width=600>
+            <img src="BrinyBaron.gif" class="pwertGIF" alt="BrinyBaronUseGIF">
             <p>
                 漩涡弹拥有1.5倍的武器面板伤害，但其接触爆炸并没有实际的范围伤害，别被爆炸的粒子效果骗了<br>
                 而漩涡弹生成的水龙卷伤害只有其的一半，也就是0.75倍武器面板伤害，水龙卷会对接触到的敌人造成潮湿减益
