--- a/cn/weapon/weaponPage.html
+++ b/cn/weapon/weaponPage.html
@@ -39,7 +39,7 @@
         <main class="main-content">
             <h1>示例武器介绍模板</h1>
             <p> 
-                示例武器介绍模板是一把.....下的....武器，掉落.....<br>
+                示例武器介绍模板是一把.....的....武器，掉落.....<br>
                 更多具体描述...<br>
                 更多具体描述...<br>
                 更多具体描述...<br>
