--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <!--<li><a href="index.html">返回主页</a></li>--> 
                     <li><a href="cn/core/weaponList.html">武器</a></li>
                     <li><a href="#">改动</a></li>
-                    <li><a href="#">敌人</a></li>
+                    <li><a href="#">生物</a></li>
                     <li><a href="#">关于模组</a></li>
                 </ul>
             </nav>
