--- a/en/core/weaponList.html
+++ b/en/core/weaponList.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>武器列表-灾厄大修Wiki</title>
+    <title>List Of Weapons-COMod Wiki</title>
     <link rel="icon" href="/Asset/other/icon_small.png" type="image/x-icon">
     <link rel="stylesheet" href="/index.css">
     <link rel="stylesheet" href="/pwertList.css">
@@ -12,10 +12,10 @@
 </head>
 <body>
     <header class="wiki-header">
-        <div class="logo">灾厄大修Wiki</div>
+        <div class="logo">Calamity Overhaul Wiki</div>
         <div class="search-bar">
-            <input type="text" id="search" placeholder="搜索..." onclick="performSearch()">
-            <button onclick="searchButton()" id="search-button">搜索</button>
+            <input type="text" id="search" placeholder="Search..." onclick="performSearch()">
+            <button onclick="searchButton()" id="search-button">Search</button>
         </div>
         <div id="search-results">
             <div class="search-result-item"></div>
@@ -28,23 +28,23 @@
         <aside class="sidebar">
             <nav>
                 <ul>
-                    <li><a href="/index.html">返回主页</a></li>
-                    <li><a href="#">改动</a></li>
-                    <li><a href="#">敌人</a></li>
-                    <li><a href="#">关于模组</a></li>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="#">Modify</a></li>
+                    <li><a href="#">Enemy</a></li>
+                    <li><a href="#">About Mod</a></li>
                 </ul>
             </nav>
         </aside>
 
         <main class="main-content">
-            <h1>武器列表</h1>
-            <p>点击任何武器以查看详细信息。</p>
+            <h1>List Of Weapons</h1>
+            <p>Click on any weapon to see details.</p>
             <div class="weapon-grid">
-                <div class="weapon-item" onclick="location.href='/cn/weapon/BrinyBaron.html'">
+                <div class="weapon-item" onclick="location.href='/en/weapon/BrinyBaron.html'">
                     <img src="/Asset/weapon/BrinyBaron.png" alt="BrinyBaron">
-                    <p>海爵剑</p>
+                    <p>BrinyBaron</p>
                 </div>
-                <div class="weapon-item" onclick="location.href='/cn/weapon/weaponPage.html'">
+                <div class="weapon-item" onclick="location.href='/en/weapon/weaponPage.html'">
                     <img src="/Asset/M1.gif" alt="武器2">
                     <p>武器2</p>
                 </div>
@@ -57,7 +57,7 @@
     </div>
 
     <footer class="wiki-footer">
-        &copy; 2024 CalamityOverhaul Wiki. 保留所有权利.
+        &copy; 2024 CalamityOverhaul Wiki. All rights reserved.
     </footer>
 </body>
 </html>
